objects/DMAPP__AM_Answer__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__AM_Question__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>AM Question</label>
        <referenceTo>DMAPP__AM_Question__c</referenceTo>
        <relationshipLabel>AM Answers</relationshipLabel>
        <relationshipName>AM_Answers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Account_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>DMAPP__DM_Account_Plan__c</referenceTo>
        <relationshipLabel>AM Answers</relationshipLabel>
        <relationshipName>AM_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Answer__c</fullName>
        <label>Answer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Maximum_Score__c</fullName>
        <formula>Max(DMAPP__AM_Question__r.DMAPP__Yes_Score__c, DMAPP__AM_Question__r.DMAPP__No_Score__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maximum Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Note_Entered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Note Entered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Note__c</fullName>
        <label>Note</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Score__c</fullName>
        <formula>IF(ISPICKVAL(DMAPP__Answer__c, &apos;Yes&apos;),
DMAPP__AM_Question__r.DMAPP__Yes_Score__c, IF(ISPICKVAL(DMAPP__Answer__c, &apos;No&apos;),
DMAPP__AM_Question__r.DMAPP__No_Score__c, DMAPP__AM_Question__r.DMAPP__Unknown_Score__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>AM Answer</label>
    <nameField>
        <label>Account Plan Answer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AM Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>